made changes to new packed versions

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
                             </div>
                             <div class="input-group mb-3" style="height: 50px;">
                                 <span class="input-group-text fw-bold">HEIGHT</span>
-                                <input type="number" class="form-control" placeholder="eg. 145, 155, 160" name="height" required>
+                                <input type="number" class="form-control" placeholder="eg. 145, 155, 160" name="height" min="100" max="200" required>
                                 <span class="input-group-text">CM</span>
                             </div>
                             <div class="input-group mb-3" style="height: 50px;">
